fix: limit 'contacts' block to 320px, allowing word-wrap

--- a/source/sass/blocks/contact-block.scss
+++ b/source/sass/blocks/contact-block.scss
@@ -3,6 +3,8 @@
   padding-right: 1em;
   margin-left: 10px;
   margin-right: 10px;
+  max-width: 320px;
+  word-wrap: break-word;
 }
 
 .contact-block__header {
